--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
           <img class="btn-search" src="./icons/search.svg" />
           <img class="btn-mic" src="./icons/mic.svg" />
         </form>
+        <div id="result"></div>
       </main>
     </div>
+    <script src="./main.js"></script>
   </body>
 </html>
