--- a/index.html
+++ b/index.html
@@ -30,11 +30,36 @@
           <span>e</span>
         </h1>
         <form class="search">
-          <input type="text" />
+          <input id="input" type="text" />
           <img class="btn-search" src="./icons/search.svg" />
           <img class="btn-mic" src="./icons/mic.svg" />
         </form>
-        <div id="result"></div>
+        <ul id="result">
+          <li>
+            <a
+              href="https://www.wired.com/story/china-hacking-competition-real-victim/"
+            >
+              <article class="article">
+                <h2 class="article-title">title<strong>HEy</strong></h2>
+                <p class="article-meta">
+                  <span class="author">author</span
+                  ><span class="createdAt">2024-10-06</span>
+                </p>
+                <p class="article-content">
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Fugit aut ducimus in dolorem deleniti perspiciatis veniam,
+                  corrupti, vitae obcaecati unde consequuntur aliquid fugiat
+                  magnam, eaque ullam. Delectus reiciendis fuga saepe?
+                </p>
+              </article>
+              <figure class="cover">
+                <img
+                  src="https://media.wired.com/photos/66e9e677674cbda93dc3bb31/191:100/w_1280,c_limit/Security_China_Hacking_Competition_GettyImages-671058250.jpg"
+                />
+              </figure>
+            </a>
+          </li>
+        </ul>
       </main>
     </div>
     <script src="./main.js"></script>
